dark mode fix

--- a/styles.css
+++ b/styles.css
@@ -198,94 +198,3 @@ footer p {
 .dark-mode .service-card {
     background-color: #f0f0f0;
 }
-
-/* dark mode btn */
-
-.btn-container {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    transition: 0.5s;
-}
-
-input {
-    display: none;
-}
-
-.display {
-    width: 10%;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-label {
-    width: 100px;
-    height: 25px;
-    border-radius: 999px;
-    background: #2c2c2c;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5) inset;
-    cursor: pointer;
-    position: relative;
-}
-
-.circle {
-    border: solid;
-    width: 16px;
-    height: 16px;
-    border-radius: 99px;
-    background: #111;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05), -10px -10px 30px rgba(0, 0, 0, 0.05) inset;
-    position: absolute;
-    top: 50%;
-    left: 10%;
-    transform: translate(10%, -50%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-svg {
-    width: 10px;
-    position: absolute
-}
-
-.sun {
-    color: #ffd600;
-    margin-top: -150%;
-    opacity: 0;
-}
-
-.moon {
-    margin-top: 0%;
-    color: white;
-    opacity: 1;
-}
-
-input[type=checkbox]:checked + .display label .circle {
-    background: #f3f3f3;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5) inset;
-}
-
-input[type=checkbox]:checked + .display label .circle {
-    left: 100%;
-    transform: translate(-10%, -50%);
-    background: white;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5), -10px -10px 30px rgba(0, 0, 0, 0.5) inset;
-}
-
-input[type=checkbox]:checked + .display label .circle .moon {
-    margin-top: 150%;
-    opacity: 0;
-}
-
-input[type=checkbox]:checked + .display label .circle .sun {
-    margin-top: 0%;
-    opacity: 1;
-}
-
-label:active .circle {
-    width: 25x
-}
